--- a/BrazSpeech_AB_Test/requirements.txt
+++ b/BrazSpeech_AB_Test/requirements.txt
@@ -1,23 +1,86 @@
-blinker==1.7.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.1
-Flask-Login==0.6.3
-gunicorn==21.2.0
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.4
-numpy==1.26.3
-packaging==23.2
-pandas==2.2.0
-pyarrow==15.0.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.4
-requests==2.31.0
-six==1.16.0
-tzdata==2023.4
-urllib3==2.1.0
-Werkzeug==3.0.1
+adbc_driver_manager==0.9.0
+adbc_driver_postgresql==0.9.0
+adbc_driver_sqlite==0.9.0
+AppKit==0.2.8
+asgiref==3.7.2
+attr==0.3.2
+beautifulsoup4==4.12.3
+boto3==1.34.39
+botocore==1.34.39
+brotli==1.1.0
+brotlicffi==1.1.0.0
+ConfigParser==6.0.0
+cryptography==3.4.8
+ctypes_snappy==1.03
+cycler==0.12.1
+Cython==3.0.8
+dask==2024.2.0
+dl==0.1.0
+docutils==0.20.1
+eventlet==0.35.1
+fastparquet==2024.2.0
+Foundation==0.1.0a0.dev1
+fsspec==2023.12.2
+gevent==23.9.1
+greenlet==3.0.3
+HTMLParser==0.0.2
+hypothesis==6.98.3
+importlib_metadata==4.6.4
+inotify==0.2.10
+ipython==8.21.0
+ipywidgets==8.1.2
+jnius==1.1.0
+JPype1==1.5.0
+keyring==23.5.0
+lockfile==0.12.2
+lxml==5.1.0
+matplotlib==3.8.2
+mock==5.1.0
+mtrand==0.1
+mypy==1.8.0
+numarray==1.5.1
+Numeric==24.2
+numexpr==2.9.0
+odfpy==1.4.1
+openpyxl==3.1.2
+ordereddict==1.1
+PasteScript==3.4.0
+pickle5==0.0.12
+Pillow==9.0.1
+Pillow==10.2.0
+protobuf==3.12.4
+psutil==5.9.0
+PyInstaller==6.4.0
+pyOpenSSL==24.0.0
+PyQt4==4.11.4
+PyQt5==5.15.10
+pytest==8.0.0
+python_calamine==0.1.7
+pyxlsb==1.0.10
+PyYAML==5.4.1
+PyYAML==6.0.1
+qtpy==2.4.1
+railroad==0.5.0
+s3fs==2024.2.0
+scikit_learn==1.4.0
+scipy==1.12.0
+setproctitle==1.3.3
+sets==0.3.2
+setuptools_scm==8.0.4
+simplejson==3.19.2
+Sphinx==7.2.6
+SQLAlchemy==2.0.25
+tables==3.9.2
+testbench==0.1.2
+thread==0.1.3
+threadpoolctl==3.2.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.14.1
+watchdog==4.0.0
+xarray==2024.1.1
+xlrd==2.0.1
+xlsxwriter==3.1.9
+xmlrpclib==1.0.1
+zipp==1.0.0
+zstandard==0.22.0
