--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ __pycache__/
 *.so
 
 # csv files
-*.csv
+BrazSpeech_AB_Test/csv/assignment_mos.csv
+BrazSpeech_AB_Test/csv/assignment_mos.csv
 
 # Distribution / packaging
 .Python
