--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@ __pycache__/
 
 # csv files
 BrazSpeech_AB_Test/csv/assignment_mos.csv
-BrazSpeech_AB_Test/csv/assignment_mos.csv
+BrazSpeech_AB_Test/csv/assignment_xab.csv
+
+# login data
+BrazSpeech_AB_Test/static/json/credentials.json
 
 # Distribution / packaging
 .Python
